--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <header>Punk API Beer App</header>
+    <header>Punk API:IPA</header>
     <div class="container">
       <div class="filters">
         <div class="card filter-card">
